wip indicator added to the rest of the projects

--- a/mony.html
+++ b/mony.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style/project_typography.css"/>
     <link rel="stylesheet" href="style/menu.css"/>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'/>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet'
+          type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic'
+          rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
 
     <meta name="viewport" content="width=device-width">
@@ -20,7 +23,7 @@
     <!-- Add jQuery library -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 
     <link rel="stylesheet" href="style/fancybox_styling.css"/>
@@ -38,7 +41,10 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-		</script>
+
+
+
+    </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
     <script>
@@ -57,7 +63,10 @@
                 g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
                 g.clearUserCookie=function(){};
             })(window,document,window['_fs_namespace'],'script','user');
-		</script>
+
+
+
+    </script>
 
 </head>
 
@@ -72,7 +81,8 @@
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
 
-        </script>
+
+</script>
 
 <script type="text/javascript">
             $(document).ready(function() {
@@ -84,7 +94,9 @@
                     initTopMenuActions("body_panel");
                 });
             });
-		</script>
+
+
+</script>
 
 <div id="menu"></div>
 <div id="body_panel" class="project">
@@ -129,19 +141,31 @@
             </a>
         </div>
 
-        <p>Mony is a personal finance advisor who mines card transactions to display interesting stats on personal expenses. The core idea was to read SMS alerts sent by most banks on cash widthdrawals, POS payemnts and transfers and extract relevant data in order to show spendings by categories and historical trends.</p>
+        <p>Mony is a personal finance advisor who mines card transactions to display interesting stats on personal
+            expenses. The core idea was to read SMS alerts sent by most banks on cash widthdrawals, POS payemnts and
+            transfers and extract relevant data in order to show spendings by categories and historical trends.</p>
 
-        <p>Today most banks offer similar functionalities in their apps, but in 2018 this wasn’t the case, at least in Romania. So at that time Mony was competing with apps where users had to manually input the data and were constantly annoyed and shamed with reminders.</p>
+        <p>Today most banks offer similar functionalities in their apps, but in 2018 this wasn’t the case, at least in
+            Romania. So at that time Mony was competing with apps where users had to manually input the data and were
+            constantly annoyed and shamed with reminders.</p>
 
         <div class="subtitle">My Role</div>
 
-        <p>I was the Lead Designer and Product Manager and my responsibilities ranged from needfinding, prototyping and user testing all the way up to managing the work, finding ways to build a succesfull business and pitching in front of angel investors and large audiences.</p>
+        <p>I was the Lead Designer and Product Manager and my responsibilities ranged from needfinding, prototyping and
+            user testing all the way up to managing the work, finding ways to build a succesfull business and pitching
+            in front of angel investors and large audiences.</p>
 
 
+        <div class="gallery">
+            <a data-fancybox="wip"
+               data-caption="Case studies for this project are being worked on"
+               href="img/wip.png">
+                <img class="gallery1" src="img/wip.png"/>
+            </a>
+        </div>
 
         <div id="disqus_thread"></div>
         <script>
-
                     /**
                      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
                      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
@@ -157,7 +181,8 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
-				</script>
+
+        </script>
 
     </div>
 </div>
