--- a/octoplay.html
+++ b/octoplay.html
@@ -44,6 +44,7 @@
 
 
 
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -66,6 +67,7 @@
 
 
 
+
     </script>
 
 </head>
@@ -83,6 +85,7 @@
 
 
 
+
 </script>
 
 <script type="text/javascript">
@@ -95,6 +98,7 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
 
 
 
@@ -154,7 +158,8 @@
 
         <div class="subtitle">My Role</div>
 
-        <p>I started as a consultant when the two games were already in the high fidelity prototyping pahse. I slowly became more
+        <p>I started as a consultant when the two games were already in the high fidelity prototyping pahse. I slowly
+            became more
             involved and ended up leading the design efforts for the better part of a year, working with two other
             designers.</p>
 
@@ -163,6 +168,13 @@
             Later on I took on more product management responsibilities while overseeing design.
         </p>
 
+        <div class="gallery">
+            <a data-fancybox="wip"
+               data-caption="Case studies for this project are being worked on"
+               href="img/wip.png">
+                <img class="gallery1" src="img/wip.png"/>
+            </a>
+        </div>
 
         <div id="disqus_thread"></div>
         <script>
@@ -181,6 +193,7 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
         </script>
 
     </div>
