--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
 
 						<p class="first_paragraph">Rezolve is a marketing platform that offers a mobile shopping solution along with
 							digital payments and e-marketing products. It allows brands and over 150000 merchants to leverage location
-							data from geo zones and beacons and to convert visual and audio media to an interactive experience on mobile
+							data from geo zones and beacons and to convert visual and audio media into interactive experiences on mobile
 							devices.</p>
 
 						<a class="article_link" href="rezolve.html">Read case study &rarr;</a>
