--- a/picto.html
+++ b/picto.html
@@ -41,6 +41,7 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -60,6 +61,7 @@
                 g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
                 g.clearUserCookie=function(){};
             })(window,document,window['_fs_namespace'],'script','user');
+
     </script>
 
 </head>
@@ -74,6 +76,7 @@
 
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
+
 </script>
 
 <script type="text/javascript">
@@ -86,6 +89,7 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
 </script>
 
 <div id="menu"></div>
@@ -149,6 +153,14 @@
             designers for pixel perfect mockups, marketing materials and landing pages.</p>
 
 
+        <div class="gallery">
+            <a data-fancybox="wip"
+               data-caption="Case studies for this project are being worked on"
+               href="img/wip.png">
+                <img class="gallery1" src="img/wip.png"/>
+            </a>
+        </div>
+
         <div id="disqus_thread"></div>
         <script>
                     /**
@@ -166,6 +178,7 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
         </script>
 
     </div>
