--- a/reva.html
+++ b/reva.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" href="style/resets.css"/>
-		<link rel="stylesheet" href="style/global.css"/>
-		<link rel="stylesheet" href="style/layout.css"/>
-		<link rel="stylesheet" href="style/menu.css"/>
-		<link rel="stylesheet" href="style/project_typography.css"/>
+<head>
+    <link rel="stylesheet" href="style/resets.css"/>
+    <link rel="stylesheet" href="style/global.css"/>
+    <link rel="stylesheet" href="style/layout.css"/>
+    <link rel="stylesheet" href="style/menu.css"/>
+    <link rel="stylesheet" href="style/project_typography.css"/>
 
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'/>
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
-		<link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
-		<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet'
+          type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic'
+          rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 
-        <meta name="viewport" content="width=device-width">
-		<meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8"/>
 
-		<title>Reva</title>
+    <title>Reva</title>
 
-		<!-- Add jQuery library -->
-		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <!-- Add jQuery library -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 
-		<link rel="stylesheet" href="style/fancybox_styling.css"/>
+    <link rel="stylesheet" href="style/fancybox_styling.css"/>
 
-		<script type="text/javascript" src="js/global.js"></script>
-		<script type="text/javascript" src="js/menu_utils.js"></script>
-		<script type="text/javascript" src="js/video.js"></script>
+    <script type="text/javascript" src="js/global.js"></script>
+    <script type="text/javascript" src="js/menu_utils.js"></script>
+    <script type="text/javascript" src="js/video.js"></script>
 
-		<!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
-		<script>
+    <!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
+    <script>
 			(function(h,o,t,j,a,r){
 				h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
 				h._hjSettings={hjid:314578,hjsv:5};
@@ -40,10 +43,10 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-		</script>
+    </script>
 
-		<!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
-		<script>
+    <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
+    <script>
             window['_fs_debug'] = false;
             window['_fs_host'] = 'fullstory.com';
             window['_fs_org'] = 'BNK0F';
@@ -59,13 +62,13 @@
                 g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
                 g.clearUserCookie=function(){};
             })(window,document,window['_fs_namespace'],'script','user');
-		</script>
+    </script>
 
-    </head>
+</head>
 
-	<body>
+<body>
 
-        <script>
+<script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -73,10 +76,9 @@
 
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
+</script>
 
-        </script>
-
-		<script type="text/javascript">
+<script type="text/javascript">
             $(document).ready(function() {
                 //apply fancybox options
                 $("[data-fancybox]").fancybox(fancyboxOptions);
@@ -86,55 +88,74 @@
                     initTopMenuActions("body_panel");
                 });
             });
-		</script>
+</script>
 
-		<div id="menu"></div>
-		<div id="body_panel" class="project">
+<div id="menu"></div>
+<div id="body_panel" class="project">
 
-			<div class="content">
-				<div class="date">August 2016 - January 2020</div>
-				<div class="title">Reva</div>
-				<div class="tagline">Building the future of real estate technology</div>
+    <div class="content">
+        <div class="date">August 2016 - January 2020</div>
+        <div class="title">Reva</div>
+        <div class="tagline">Building the future of real estate technology</div>
 
-				<div class="tags">
-					<span class="tag">WEB</span>
-					<span class="tag">RESPONSIVENESS</span>
-					<span class="tag">ENTERPRISE</span>
-					<span class="tag">WIREFRAMING</span>
-					<span class="tag">SHADOWING</span>
-					<span class="tag">SKETCH</span>
-					<span class="tag">BALSAMIQ</span>
-					<span class="tag">FIGMA</span>
-					<span class="tag">REMOTE</span>
-					<span class="tag">PRODUCT MANAGEMENT</span>
-					<span class="tag">CUSTOMER SUPPORT</span>
-				</div>
+        <div class="tags">
+            <span class="tag">WEB</span>
+            <span class="tag">RESPONSIVENESS</span>
+            <span class="tag">ENTERPRISE</span>
+            <span class="tag">WIREFRAMING</span>
+            <span class="tag">SHADOWING</span>
+            <span class="tag">SKETCH</span>
+            <span class="tag">BALSAMIQ</span>
+            <span class="tag">FIGMA</span>
+            <span class="tag">REMOTE</span>
+            <span class="tag">PRODUCT MANAGEMENT</span>
+            <span class="tag">CUSTOMER SUPPORT</span>
+        </div>
 
-				<div class="gallery">
-					<a data-fancybox="hero"
-					   href="img/reva/reva-renewals.png">
-						<img class="gallery1" src="img/reva/reva-renewals.png"/>
-					</a>
-				</div>
+        <div class="gallery">
+            <a data-fancybox="hero"
+               href="img/reva/reva-renewals.png">
+                <img class="gallery1" src="img/reva/reva-renewals.png"/>
+            </a>
+        </div>
 
-				<p class="first_paragraph">Reva is a vertically integrated CRM for the US multifamily real estate market. The project started in 2015 when an industry player reached out to a group of Silicon Valley entrepreneurs to co-develop a solution that leverages new technological advancements to address usability and reliability issues and gather actionable analytics.</p>
+        <p class="first_paragraph">Reva is a vertically integrated CRM for the US multifamily real estate market. The
+            project started in 2015 when an industry player reached out to a group of Silicon Valley entrepreneurs to
+            co-develop a solution that leverages new technological advancements to address usability and reliability
+            issues and gather actionable analytics.</p>
 
-				<div id="team_setup" class="subtitle2">Team setup</div>
-				<p>I was part of a very experienced product team of six. We coordinated with engineering teams on three continents. Most of the product team was on the US west coast and engineering was spread accross Romania, Costa Rica and Peru.
-					I collaborated remotely with the product team while acting as a liaison between Product and the Romanian engineering team.
-				</p>
+        <div id="team_setup" class="subtitle2">Team setup</div>
+        <p>I was part of a very experienced product team of six. We coordinated with engineering teams on three
+            continents. Most of the product team was on the US west coast and engineering was spread accross Romania,
+            Costa Rica and Peru.
+            I collaborated remotely with the product team while acting as a liaison between Product and the Romanian
+            engineering team.
+        </p>
 
-				<div id="my_role" class="subtitle2">My role</div>
-				<p>I started as a UX designer, after a very thorough interview. In the beginning there was a lot of wireframing and design critique as we were laying the foundations of the design system and covering the main flows. The role quickly evolved into someting more complex as I began to write engineering stories, plan engineering sprints and validate implementations.
-					As I became more familiar with the business and user needs, with the product vision and technological constraints I took on more complex Product assignments that culminated with me managing Contract Renewals, a large and complex feature that took over a year to design, develop and release.
-				</p>
+        <div id="my_role" class="subtitle2">My role</div>
+        <p>I started as a UX designer, after a very thorough interview. In the beginning there was a lot of wireframing
+            and design critique as we were laying the foundations of the design system and covering the main flows. The
+            role quickly evolved into someting more complex as I began to write engineering stories, plan engineering
+            sprints and validate implementations.
+            As I became more familiar with the business and user needs, with the product vision and technological
+            constraints I took on more complex Product assignments that culminated with me managing Contract Renewals, a
+            large and complex feature that took over a year to design, develop and release.
+        </p>
 
-				<p>For a brief period I took on custumer support responsibilities. Being closer to users and customers really helped me gain a better understanding of whom I was designing for and what the priorities were.
-				</p>
+        <p>For a brief period I took on custumer support responsibilities. Being closer to users and customers really
+            helped me gain a better understanding of whom I was designing for and what the priorities were.
+        </p>
 
+        <div class="gallery">
+            <a data-fancybox="wip"
+               data-caption="Case studies for this project are being worked on"
+               href="img/wip.png">
+                <img class="gallery1" src="img/wip.png"/>
+            </a>
+        </div>
 
-                <div id="disqus_thread"></div>
-                <script>
+        <div id="disqus_thread"></div>
+        <script>
 
                     /**
                      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -151,9 +172,10 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
-                </script>
 
-            </div>
-        </div>
-	</body>
+        </script>
+
+    </div>
+</div>
+</body>
 </html>
