reva - proof read

--- a/reva.html
+++ b/reva.html
@@ -43,6 +43,8 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -62,6 +64,8 @@
                 g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
                 g.clearUserCookie=function(){};
             })(window,document,window['_fs_namespace'],'script','user');
+
+
     </script>
 
 </head>
@@ -76,6 +80,8 @@
 
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
+
+
 </script>
 
 <script type="text/javascript">
@@ -88,6 +94,8 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
+
 </script>
 
 <div id="menu"></div>
@@ -113,9 +121,9 @@
         </div>
 
         <div class="gallery">
-            <a data-fancybox="hero"
-               href="img/reva/reva-renewals.png">
-                <img class="gallery1" src="img/reva/reva-renewals.png"/>
+            <a data-fancybox="hero" class="needsBorder"
+               href="img/reva/reva-hero.png">
+                <img class="gallery1 with_border" src="img/reva/reva-hero.png"/>
             </a>
         </div>
 
@@ -126,23 +134,23 @@
 
         <div id="team_setup" class="subtitle2">Team setup</div>
         <p>I was part of a very experienced product team of six. We coordinated with engineering teams on three
-            continents. Most of the product team was on the US west coast and engineering was spread accross Romania,
+            continents. Most of the product team was on the US west coast and engineering was spread across Romania,
             Costa Rica and Peru.
             I collaborated remotely with the product team while acting as a liaison between Product and the Romanian
-            engineering team.
+            engineering teams.
         </p>
 
         <div id="my_role" class="subtitle2">My role</div>
         <p>I started as a UX designer, after a very thorough interview. In the beginning there was a lot of wireframing
             and design critique as we were laying the foundations of the design system and covering the main flows. The
-            role quickly evolved into someting more complex as I began to write engineering stories, plan engineering
+            role quickly evolved as I began to write engineering stories, plan engineering
             sprints and validate implementations.
-            As I became more familiar with the business and user needs, with the product vision and technological
-            constraints I took on more complex Product assignments that culminated with me managing Contract Renewals, a
+            As I became more familiar with the business and user needs, product vision and technological
+            constraints, I took on more complex assignments that culminated with me managing Contract Renewals, a
             large and complex feature that took over a year to design, develop and release.
         </p>
 
-        <p>For a brief period I took on custumer support responsibilities. Being closer to users and customers really
+        <p>For a brief period I took on customer support responsibilities. Being closer to users and customers really
             helped me gain a better understanding of whom I was designing for and what the priorities were.
         </p>
 
@@ -172,6 +180,8 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
+
 
         </script>
 
