mony - proof read

--- a/mony.html
+++ b/mony.html
@@ -44,6 +44,9 @@
 
 
 
+
+
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -66,6 +69,9 @@
 
 
 
+
+
+
     </script>
 
 </head>
@@ -82,6 +88,9 @@
             ga('send', 'pageview');
 
 
+
+
+
 </script>
 
 <script type="text/javascript">
@@ -94,6 +103,9 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
+
+
 
 
 </script>
@@ -142,17 +154,18 @@
         </div>
 
         <p>Mony is a personal finance advisor who mines card transactions to display interesting stats on personal
-            expenses. The core idea was to read SMS alerts sent by most banks on cash widthdrawals, POS payemnts and
-            transfers and extract relevant data in order to show spendings by categories and historical trends.</p>
+            expenses. The core idea was to parse SMS alerts sent by most banks on cash withdrawals, POS payments and
+            transfers and extract relevant data in order to show spendings by category and historical trends.</p>
 
-        <p>Today most banks offer similar functionalities in their apps, but in 2018 this wasn’t the case, at least in
-            Romania. So at that time Mony was competing with apps where users had to manually input the data and were
+        <p>Today most banks offer similar functionalities in their apps, but in 2018 this wasn’t the case, at least not
+            in Romania. So at that time Mony was competing with apps where users had to manually input the data and were
             constantly annoyed and shamed with reminders.</p>
 
         <div class="subtitle">My Role</div>
 
-        <p>I was the Lead Designer and Product Manager and my responsibilities ranged from needfinding, prototyping and
-            user testing all the way up to managing the work, finding ways to build a succesfull business and pitching
+        <p>I played the Lead Designer and Product Manager during this time. My responsibilities ranged from needfinding,
+            prototyping and
+            user testing all the way up to managing the work, finding ways to build a successful business and pitching
             in front of angel investors and large audiences.</p>
 
 
@@ -181,6 +194,9 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
+
+
 
         </script>
 
