picto - proof read

--- a/picto.html
+++ b/picto.html
@@ -42,6 +42,7 @@
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -62,6 +63,7 @@
                 g.clearUserCookie=function(){};
             })(window,document,window['_fs_namespace'],'script','user');
 
+
     </script>
 
 </head>
@@ -77,6 +79,7 @@
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
 
+
 </script>
 
 <script type="text/javascript">
@@ -89,6 +92,7 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
 
 </script>
 
@@ -136,20 +140,21 @@
             </a>
         </div>
 
-        <p>Picto is a mobile marketplace for on demand photography. It is meant for families, travelers and social media
+        <p>Picto is a mobile marketplace for on-demand photography. It is meant for families, travelers and social media
             active people, on occasions when a selfie is simply not enough. The idea is to hail a nearby photographer
-            for a micro photo shoot with instant delivery at an affordable cost.</p>
+            for a micro photo shoot with instant delivery at an affordable price.</p>
 
         <div class="subtitle">My Role</div>
 
-        <p>My main role was to manage the product. I was heavily involved in validating the need, the technological and
+        <p>My main duty was to manage the product. I was heavily involved in validating the need and the technological
+            and
             the business assumptions. Once we moved on to implementation, I managed the engineering sprints and started
             developing relationships with partners (photographers, festival organizers, PR companies, social media
             influencers and marketing agencies). When we got close to launch, I started developing relationships with
             the local startup ecosystem and began pitching the idea to angel investors.</p>
 
-        <p>My secondary role was to lead the design effort. Early on I was in charge of wireframing, prototyping and
-            user testing of the solution. Later on I led the branding effort and worked closely with our visual
+        <p>My secondary role was to lead the design efforts. Early on I was in charge of wireframing, prototyping and
+            user testing the solution. Later on I led the branding effort and worked closely with visual
             designers for pixel perfect mockups, marketing materials and landing pages.</p>
 
 
@@ -178,6 +183,7 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
 
         </script>
 
