--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,7 @@
 
 
 
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -54,6 +55,7 @@
 
 
 
+
     </script>
 
     <title>Ovidiu Berdila - Projects</title>
@@ -68,6 +70,7 @@
 
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
+
 
 
 
@@ -87,6 +90,7 @@
                     }
                 );
             });
+
 
 
 
@@ -188,11 +192,11 @@
                     <span class="tag">UX WRITING</span>
                 </div>
 
-                <p>Picto is a mobile marketplace for on demand photography. It is meant for families, travelers and
+                <p>Picto is a mobile marketplace for on-demand photography. It is meant for families, travelers and
                     social media
                     active people, on occasions when a selfie is simply not enough. The idea is to hail a nearby
                     photographer
-                    for a micro photo shoot with instant delivery at an affordable cost.</p>
+                    for a micro photo shoot with instant delivery at an affordable price.</p>
 
                 <a class="article_link" href="picto.html">Read case study &rarr;</a>
             </div>
@@ -424,6 +428,7 @@
 				function unhover(element) {
 					element.find(".overlay").css("visibility", "hidden");
 				};
+
 
 
 
