octoplay - proof read

--- a/octoplay.html
+++ b/octoplay.html
@@ -45,6 +45,7 @@
 
 
 
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -68,6 +69,7 @@
 
 
 
+
     </script>
 
 </head>
@@ -86,6 +88,7 @@
 
 
 
+
 </script>
 
 <script type="text/javascript">
@@ -98,6 +101,7 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
 
 
 
@@ -153,18 +157,18 @@
             co-developed with domain experts in SLP and ASD and leverages AR and VR to keep children engaged and
             focused.</p>
 
-        <p>There are two games, one that focused maily on short term memory and another one that focuses on pronouncing
+        <p>There are two games, one that focuses mainly on short term memory and another one that focuses on pronouncing
             sounds.</p>
 
         <div class="subtitle">My Role</div>
 
-        <p>I started as a consultant when the two games were already in the high fidelity prototyping pahse. I slowly
+        <p>I started as a consultant when the two games were already in the high fidelity prototyping phase. I slowly
             became more
             involved and ended up leading the design efforts for the better part of a year, working with two other
             designers.</p>
 
         <p>I was mainly involved in the design of the language game which we had to redo completely after involving
-            Romania’s top SLP practitioner.
+            Romania’s top SLP specialist.
             Later on I took on more product management responsibilities while overseeing design.
         </p>
 
@@ -193,6 +197,7 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
 
         </script>
 
