above the fold imagery for all projects

--- a/flexi_meetup.html
+++ b/flexi_meetup.html
@@ -105,6 +105,24 @@
 					<span class="tag">PHOTOSHOP</span>
 				</div>
 
+				<div class="gallery">
+					<a data-fancybox="hero"
+					   data-caption="Home screen with a list of upcoming events."
+					   href="img/fleximeetup/2.homescreen.png">
+						<img class="gallery3 left_image" src="img/fleximeetup/2.homescreen.png"/>
+					</a>
+					<a data-fancybox="hero"
+					   data-caption="Creation of a new event."
+					   href="img/fleximeetup/5.new%20event%202%202.png">
+						<img class="gallery3 center_image" src="img/fleximeetup/5.new%20event%202%202.png"/>
+					</a>
+					<a data-fancybox="hero"
+					   data-caption="Creation of a new event."
+					   href="img/fleximeetup/6.new%20event%203.png">
+						<img class="gallery3 right_image" src="img/fleximeetup/6.new%20event%203.png"/>
+					</a>
+				</div>
+
 				<p>18 months ago I enrolled in an online specialization offered by Coursera.org with the goal of sharpening
 					my design skills and obtaining a verifiable degree that would make it easier for me to get a full time
 					design job. After completing the seven classes, I had to work on a 10 week long capstone project that makes use of
