--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -109,6 +109,14 @@
 					<span class="tag">PRINT</span>
 				</div>
 
+				<div class="gallery">
+					<a data-fancybox="hero" class="needsBorder"
+					   data-caption="Printed version of the folding brochure."
+					   href="img/sab/flyer.png">
+						<img class="gallery1 with_border" src="img/sab/flyer.png"/>
+					</a>
+				</div>
+
 				<p>The need for smart and secured access was discovered while working on <a href="parking_plus.html" target="_blank">another product</a>.
 				It made more sense to build it as a separate product, since a flexible access control solution could be used
 					not only for parking lots, but also for offices, sports venues, homes, or any other area that has an electric locking mechanism.</p>
