--- a/parking_plus.html
+++ b/parking_plus.html
@@ -112,6 +112,25 @@
 					<span class="tag">VIDEO</span>
 				</div>
 
+				<div class="gallery">
+					<a data-fancybox="hero" class="needsBorder"
+					   data-caption="Home screen showing a map with parking availability and the primary driver actions: a
+                       filter for parking type, the ability to save parking location and most importantly, a parking scanner."
+					   href="img/parkingplus/1.map.png">
+						<img class="gallery3 left_image with_border" src="img/parkingplus/1.map.png"/>
+					</a>
+					<a data-fancybox="hero" class="needsBorder"
+					   data-caption="Street parking details screen with information about availability, price and a primary navigation action."
+					   href="img/parkingplus/2.private%20parking.png">
+						<img class="gallery3 center_image with_border" src="img/parkingplus/2.private%20parking.png"/>
+					</a>
+					<a data-fancybox="hero" class="needsBorder"
+					   data-caption="Payments screen with a playful dial interaction to set the parking time and pay."
+					   href="img/parkingplus/3.payments.png">
+						<img class="gallery3 right_image with_border" src="img/parkingplus/3.payments.png"/>
+					</a>
+				</div>
+
 				<p class="first_paragraph">Parking Plus is a service that saves time for drivers and optimizes revenue
 					for parking operators. It removes the pain of finding a parking by showing up-to-date availability
 					on a map and guiding drivers to the closest available spot, in the street or in a private garage.
