hero images added to projects page

--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,11 @@
     <!-- Add jQuery library -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
+
+	<link rel="stylesheet" href="style/fancybox_styling.css"/>
+
     <script type="text/javascript" src="js/menu_utils.js"></script>
 
     <!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -121,6 +126,14 @@
                     <span class="tag">REMOTE</span>
                 </div>
 
+				<div class="gallery">
+					<a data-fancybox="rezolve" class="needsBorder"
+					   data-caption="Location baased engagement creation"
+					   href="img/rezolve/Frame 4387.png">
+						<img class="gallery1 with_border" src="img/rezolve/Frame 4387.png"/>
+					</a>
+				</div>
+
                 <p class="first_paragraph">Rezolve is a marketing platform that offers a mobile shopping solution along
                     with
                     digital payments and e-marketing products. It allows brands and over 150000 merchants to leverage
@@ -158,6 +171,26 @@
                     <span class="tag">UX WRITING</span>
                 </div>
 
+				<div class="gallery">
+					<a data-fancybox="octoplay" class="needsBorder"
+					   data-caption="Language game - List of sounds"
+					   href="img/octoplay/sunete_izolate_4 sunete a.png">
+						<img class="gallery3 left_image with_border" src="img/octoplay/sunete_izolate_4 sunete a.png"/>
+					</a>
+
+					<a data-fancybox="octoplay" class="needsBorder"
+					   data-caption="Language game - syllable formation"
+					   href="img/octoplay/II - 8 - spin button default.png">
+						<img class="gallery3 center_image with_border" src="img/octoplay/II - 8 - spin button default.png"/>
+					</a>
+
+					<a data-fancybox="octoplay" class="needsBorder"
+					   data-caption="Language game - menu"
+					   href="img/octoplay/default map - active islands.png">
+						<img class="gallery3 right_image with_border" src="img/octoplay/default map - active islands.png"/>
+					</a>
+				</div>
+
                 <p>OctoPlay is a game platform dedicated to children with speech impairments, parents and therapists. It
                     is
                     co-developed with domain experts in SLP and ASD and leverages AR and VR to keep children engaged and
@@ -192,6 +225,25 @@
                     <span class="tag">UX WRITING</span>
                 </div>
 
+				<div class="gallery">
+					<a data-fancybox="picto" class="needsBorder"
+					   data-caption="Homescreen - list of nearby pictakers"
+					   href="img/picto/Home screen - medium.png">
+						<img class="gallery3 left_image with_border" src="img/picto/Home screen - medium.png"/>
+					</a>
+					<a data-fancybox="picto" class="needsBorder"
+					   data-caption="Pictaker profile"
+					   href="img/picto/Profile pictaker - medium.jpg">
+						<img class="gallery3 center_image with_border" src="img/picto/Profile pictaker - medium.jpg"/>
+					</a>
+
+					<a data-fancybox="picto" class="needsBorder"
+					   data-caption="Photo session in progress"
+					   href="img/picto/Session - medium.jpg">
+						<img class="gallery3 right_image with_border" src="img/picto/Session - medium.jpg"/>
+					</a>
+				</div>
+
                 <p>Picto is a mobile marketplace for on-demand photography. It is meant for families, travelers and
                     social media
                     active people, on occasions when a selfie is simply not enough. The idea is to hail a nearby
@@ -225,6 +277,25 @@
                     <span class="tag">GROWTH</span>
                 </div>
 
+				<div class="gallery">
+					<a data-fancybox="mony" class="needsBorder"
+					   data-caption="Homescreen"
+					   href="img/mony/mony-homescreen-expanded.png">
+						<img class="gallery3 left_image with_border" src="img/mony/mony-homescreen-expanded.png"/>
+					</a>
+					<a data-fancybox="mony" class="needsBorder"
+					   data-caption="Trends"
+					   href="img/mony/mony-trends.png">
+						<img class="gallery3 center_image with_border" src="img/mony/mony-trends.png"/>
+					</a>
+
+					<a data-fancybox="mony" class="needsBorder"
+					   data-caption="Comparisons"
+					   href="img/mony/mony-comparison.png">
+						<img class="gallery3 right_image with_border" src="img/mony/mony-comparison.png"/>
+					</a>
+				</div>
+
                 <p>Mony is a personal finance advisor who mines card transactions to display interesting stats on
                     personal
                     expenses. The core idea was to parse SMS alerts sent by most banks on cash withdrawals, POS payments
@@ -256,6 +327,13 @@
                     <span class="tag">PRODUCT MANAGEMENT</span>
                     <span class="tag">CUSTOMER SUPPORT</span>
                 </div>
+
+				<div class="gallery">
+					<a data-fancybox="reva" class="needsBorder"
+					   href="img/reva/reva-hero.png">
+						<img class="gallery1 with_border" src="img/reva/reva-hero.png"/>
+					</a>
+				</div>
 
                 <p>Reva is a vertically integrated CRM for the US multifamily real estate market. The project started in
                     2015 when an industry player reached out to a group of Silicon Valley entrepreneurs to co-develop a
@@ -290,6 +368,25 @@
                     <span class="tag">VIDEO</span>
                 </div>
 
+				<div class="gallery">
+					<a data-fancybox="parking" class="needsBorder"
+					   data-caption="Home screen showing a map with parking availability and the primary driver actions: a
+                       filter for parking type, the ability to save parking location and most importantly, a parking scanner."
+					   href="img/parkingplus/1.map.png">
+						<img class="gallery3 left_image with_border" src="img/parkingplus/1.map.png"/>
+					</a>
+					<a data-fancybox="parking" class="needsBorder"
+					   data-caption="Street parking details screen with information about availability, price and a primary navigation action."
+					   href="img/parkingplus/2.private%20parking.png">
+						<img class="gallery3 center_image with_border" src="img/parkingplus/2.private%20parking.png"/>
+					</a>
+					<a data-fancybox="parking" class="needsBorder"
+					   data-caption="Payments screen with a playful dial interaction to set the parking time and pay."
+					   href="img/parkingplus/3.payments.png">
+						<img class="gallery3 right_image with_border" src="img/parkingplus/3.payments.png"/>
+					</a>
+				</div>
+
                 <p>Parking Plus is a service that saves time for drivers and optimizes revenue for parking operators.
                     It removes the pain of finding a parking by showing up-to-date availability on a map and guiding
                     drivers to the closest available spot, in the street or in a private garage. The experience is
@@ -321,6 +418,14 @@
                     <span class="tag">PRINT</span>
                 </div>
 
+				<div class="gallery">
+					<a data-fancybox="sab" class="needsBorder"
+					   data-caption="Printed version of the folding brochure."
+					   href="img/sab/flyer.png">
+						<img class="gallery1 with_border" src="img/sab/flyer.png"/>
+					</a>
+				</div>
+
                 <p>The need for smart and secured access was discovered while working on <a href="parking_plus.html"
                                                                                             target="_blank">another
                     product</a>.
@@ -349,6 +454,25 @@
                     <span class="tag">INVISION</span>
                     <span class="tag">PHOTOSHOP</span>
                 </div>
+
+
+				<div class="gallery">
+					<a data-fancybox="flexi"
+					   data-caption="Home screen with a list of upcoming events."
+					   href="img/fleximeetup/2.homescreen.png">
+						<img class="gallery3 left_image" src="img/fleximeetup/2.homescreen.png"/>
+					</a>
+					<a data-fancybox="flexi"
+					   data-caption="Creation of a new event."
+					   href="img/fleximeetup/5.new%20event%202%202.png">
+						<img class="gallery3 center_image" src="img/fleximeetup/5.new%20event%202%202.png"/>
+					</a>
+					<a data-fancybox="flexi"
+					   data-caption="Creation of a new event."
+					   href="img/fleximeetup/6.new%20event%203.png">
+						<img class="gallery3 right_image" src="img/fleximeetup/6.new%20event%203.png"/>
+					</a>
+				</div>
 
                 <p>18 months ago I enrolled in an online specialization offered by Coursera.org with the goal of
                     sharpening
@@ -379,6 +503,14 @@
                     <span class="tag">DESKTOP</span>
                 </div>
 
+				<div class="gallery">
+					<a data-fancybox="isoprofiler"
+					   data-caption="Screenshot with the released version"
+					   href="img/isoprofiler/final_mockup.png">
+						<img class="gallery1" src="img/isoprofiler/final_mockup.png"/>
+					</a>
+				</div>
+
                 <p>When I got involved in this project, a beta version had already been released and the feedback
                     received
                     from the early adopters was not great, both in terms of functionality and usability.
@@ -406,6 +538,14 @@
                     <span class="tag">CODE</span>
                     <span class="tag">DESKTOP</span>
                 </div>
+
+				<div class="gallery">
+					<a data-fancybox="multicoloroverlay"
+					   data-caption="The released version"
+					   href="img/network_overlay/10.released_version.png">
+						<img class="gallery1" src="img/network_overlay/10.released_version.png"/>
+					</a>
+				</div>
 
                 <p>The feature is part of a large bio informatics desktop application used by researchers to find
                     meaning
