--- a/reva.html
+++ b/reva.html
@@ -43,29 +43,32 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-
-
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
     <script>
             window['_fs_debug'] = false;
             window['_fs_host'] = 'fullstory.com';
+            window['_fs_script'] = 'edge.fullstory.com/s/fs.js';
             window['_fs_org'] = 'BNK0F';
             window['_fs_namespace'] = 'FS';
             (function(m,n,e,t,l,o,g,y){
                 if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
-                g=m[e]=function(a,b){g.q?g.q.push([a,b]):g._api(a,b);};g.q=[];
-                o=n.createElement(t);o.async=1;o.src='https://'+_fs_host+'/s/fs.js';
+                g=m[e]=function(a,b,s){g.q?g.q.push([a,b,s]):g._api(a,b,s);};g.q=[];
+                o=n.createElement(t);o.async=1;o.crossOrigin='anonymous';o.src='https://'+_fs_script;
                 y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
-                g.identify=function(i,v){g(l,{uid:i});if(v)g(l,v)};g.setUserVars=function(v){g(l,v)};
-                y="rec";g.shutdown=function(i,v){g(y,!1)};g.restart=function(i,v){g(y,!0)};
-                y="consent";g[y]=function(a){g(y,!arguments.length||a)};
+                g.identify=function(i,v,s){g(l,{uid:i},s);if(v)g(l,v,s)};g.setUserVars=function(v,s){g(l,v,s)};g.event=function(i,v,s){g('event',{n:i,p:v},s)};
+                g.anonymize=function(){g.identify(!!0)};
+                g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
+                g.log = function(a,b){g("log",[a,b])};
+                g.consent=function(a){g("consent",!arguments.length||a)};
                 g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
                 g.clearUserCookie=function(){};
+                g.setVars=function(n, p){g('setVars',[n,p]);};
+                g._w={};y='XMLHttpRequest';g._w[y]=m[y];y='fetch';g._w[y]=m[y];
+                if(m[y])m[y]=function(){return g._w[y].apply(this,arguments)};
+                g._v="1.3.0";
             })(window,document,window['_fs_namespace'],'script','user');
-
-
     </script>
 
 </head>
@@ -82,6 +85,10 @@
             ga('send', 'pageview');
 
 
+
+
+
+
 </script>
 
 <script type="text/javascript">
@@ -94,6 +101,10 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
+
+
+
 
 
 </script>
@@ -157,9 +168,42 @@
         <div class="gallery">
             <a data-fancybox="wip"
                data-caption="Case studies for this project are being worked on"
-               href="img/wip.png">
-                <img class="gallery1" src="img/wip.png"/>
+               href="img/wip2.png">
+                <img class="gallery1" src="img/wip2.png"/>
             </a>
+        </div>
+
+        <div class="gallery">
+
+            <a data-fancybox="screens" class="needsBorder"
+               href="img/reva/Party Details (1).png">
+                <img class="gallery1 with_border" src="img/reva/Party Details (1).png"/>
+            </a>
+            <a data-fancybox="screens" class="needsBorder"
+               href="img/reva/Party Details.png">
+                <img class="gallery1 with_border" src="img/reva/Party Details.png"/>
+            </a>
+            <a data-fancybox="screens" class="needsBorder"
+               href="img/reva/Frame 88.png">
+                <img class="gallery1 with_border" src="img/reva/Frame 88.png"/>
+            </a>
+            <a data-fancybox="screens" class="needsBorder"
+               href="img/reva/Lease.png">
+                <img class="gallery1 with_border" src="img/reva/Lease.png"/>
+            </a>
+            <a data-fancybox="screens" class="needsBorder"
+               href="img/reva/Lease - Eidt or email alert.png">
+                <img class="gallery1 with_border" src="img/reva/Lease - Eidt or email alert.png"/>
+            </a>
+            <a data-fancybox="screens" class="needsBorder"
+               href="img/reva/Person Details Page.png">
+                <img class="gallery1 with_border" src="img/reva/Person Details Page.png"/>
+            </a>
+            <a data-fancybox="screens" class="needsBorder"
+               href="img/reva/Property page - floorplan expanded.png">
+                <img class="gallery1 with_border" src="img/reva/Property page - floorplan expanded.png"/>
+            </a>
+
         </div>
 
         <div id="disqus_thread"></div>
@@ -180,6 +224,10 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
+
+
+
 
 
 
